--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/webpack": "^2.0.0",
     "add-asset-html-webpack-plugin": "^1.0.2",
     "angular2-template-loader": "^0.6.0",
+    "apply-loader": "^1.0.0",
     "assets-webpack-plugin": "^3.4.0",
     "awesome-typescript-loader": "~3.0.0-beta.18",
     "codelyzer": "~2.0.0-beta.4",
@@ -130,6 +131,7 @@
     "optimize-js-plugin": "0.0.4",
     "parse5": "^3.0.1",
     "protractor": "^4.0.14",
+    "pug-loader": "^2.3.0",
     "raw-loader": "0.5.1",
     "rimraf": "~2.5.4",
     "sass-loader": "^4.1.1",
